# footwatch

./: .gitignore  Objective3_ProductionGrade_Guide.md  Objective_3_Footpath_Enforcement_ML_Guide.md  tFrotend_Temp1.md  tech-stack.md
.history/edge_ros2/: test_mqtt_local_20260422151854.py  test_mqtt_local_20260422151914.py
.history/edge_ros2/config/: mqtt_config_20260417122241.json
Backend/: .env.example  README.md  pyproject.toml  requirements.txt
Backend/.local/: alerts.jsonl  camera_live_state.json  evidence_complete.jsonl  idempotency.json  violations.jsonl
Backend/.local/challans/: CH-20260421-08B16B2B.html  CH-20260421-1432131D.html  CH-20260421-1B24BAE3.html  CH-20260421-26C51FC6.html  CH-20260421-28A84749.html  CH-20260421-2D6333D7.html  CH-20260421-45840103.html  CH-20260421-719F1C17.html  CH-20260421-8F172BA2.html  CH-20260421-A46AEBA3.html
Backend/.local/test_challan_assets/: CH-20260101-61BA97A21E.html
Backend/docs/api/: examples.md
Backend/docs/runbooks/: incident_response.md  rollback.md
Backend/infra/terraform/: backend.hcl.example  cloudwatch.tf  dynamodb.tf  lambda.tf  outputs.tf  plan_after_fix.txt  plan_final_utf8.txt  sqs.tf  terraform.tfvars.example  tfplan
Backend/services/common/: __init__.py  auth.py  config.py  errors.py  plate.py  validators.py  vehicle_ai.py
Backend/services/contracts/: openapi.yaml
Backend/services/contracts/schemas/: detect_violation_ingest.json  generate_challan_ingest.json  live_camera_state.json  violation_ingest.json  violation_record.json
Backend/services/ingest_api/: app.py  lambda_handler.py
Backend/services/ingest_api/handlers/: challan_pipeline.py  post_detect_violation.py  post_evidence_complete.py  post_generate_challan.py  post_violation.py
Backend/services/ingest_api/repositories/: camera_live_state_repo.py  idempotency_repo.py  violation_queue_repo.py
Backend/services/ingest_api/tests/: test_challan_pipeline.py  test_post_telemetry.py
Backend/services/local_dev/: docker-compose.yml
Backend/services/query_api/: app.py  lambda_handler.py
Backend/services/query_api/handlers/: get_alerts.py  get_edge_config.py  get_edge_runtime_status.py  get_live_cameras.py
Backend/services/query_api/repositories/: __init__.py  alerts_read_repo.py  challans_read_repo.py  edge_runtime_repo.py  evidence_repo.py  live_state_read_repo.py  violations_read_repo.py
Backend/services/query_api/tests/: test_challans.py  test_edge_runtime.py
Backend/services/workers/process_violation_queue/: handler.py  lambda_handler.py
Backend/services/workers/process_violation_queue/services/: alert_publisher.py  challan_generator.py  gemini_vehicle_enricher.py  violation_normalizer.py
Backend/services/workers/process_violation_queue/tests/: test_worker_happy_path.py
Frontend/: index.html  package-lock.json  tsconfig.app.json  vite.config.ts
Frontend/src/: App.tsx
Frontend/src/pages/: CameraLabPage.tsx  ChallanDetailsPage.tsx  ChallansPage.tsx  DashboardPage.tsx  NotFoundPage.tsx  ViolationDetailsPage.tsx  ViolationsPage.tsx
Frontend/src/styles/: tokens.css
Frontend/tests/contract/: mapViolationForTable.test.ts
Frontend/tests/e2e/: dashboard.smoke.spec.ts
Frontend/tests/ui/: KpiStrip.test.tsx  ViolationFilters.test.tsx
edge_ros2/: .gitignore  README.md  pytest.ini  requirements.txt  test_mqtt_local.py
edge_ros2/config/: camera_lab.json  cyclonedds.xml  footpath_roi.json  mosquitto.dev.conf  mqtt_config.json  speed_calibration.json  thresholds.json
edge_ros2/ros2_ws/src/fw_inference_node/: package.xml  setup.py
edge_ros2/ros2_ws/src/fw_inference_node/fw_inference_node/: inference_node.py
edge_ros2/ros2_ws/src/fw_launch/: package.xml  setup.py
edge_ros2/ros2_ws/src/fw_launch/launch/: footwatch_launch.py
edge_ros2/ros2_ws/src/fw_msgs/: CMakeLists.txt  package.xml
edge_ros2/ros2_ws/src/fw_msgs/msg/: Detection.msg  DetectionArray.msg  PlateOcr.msg  RuntimeHealth.msg  TrackResult.msg  TrackResultArray.msg  ViolationCandidate.msg  ViolationConfirmed.msg
edge_ros2/ros2_ws/src/fw_plate_ocr_node/: package.xml  setup.py
edge_ros2/ros2_ws/src/fw_plate_ocr_node/fw_plate_ocr_node/: plate_ocr_node.py
edge_ros2/ros2_ws/src/fw_ros2_mqtt_bridge/: package.xml  setup.py
edge_ros2/ros2_ws/src/fw_ros2_mqtt_bridge/fw_ros2_mqtt_bridge/: mqtt_bridge_node.py
edge_ros2/ros2_ws/src/fw_sensor_bridge/: package.xml  setup.py
edge_ros2/ros2_ws/src/fw_sensor_bridge/fw_sensor_bridge/: sensor_bridge_node.py
edge_ros2/ros2_ws/src/fw_tracking_speed_node/: package.xml  setup.py
edge_ros2/ros2_ws/src/fw_tracking_speed_node/fw_tracking_speed_node/: tracking_speed_node.py
edge_ros2/ros2_ws/src/fw_violation_aggregator/: package.xml  setup.py
edge_ros2/ros2_ws/src/fw_violation_aggregator/fw_violation_aggregator/: violation_aggregator.py
edge_ros2/scripts/: download_models.py  local_mqtt_to_aws_mock.py  setup.sh  smoke_test.sh  start.sh
edge_ros2/tests/contract/: test_mqtt_payload_schema.py
edge_ros2/tests/integration/: test_pipeline_flow.py
edge_ros2/tests/unit/: test_evidence_writer.py  test_plate_enhancement.py  test_speed_estimation.py
footwatch/: .gitignore  Backend_Temp2.md  IoT_ML_Development_Guide.md
footwatch/Backend/: pyproject.toml  requirements.lambda.txt  requirements.txt
footwatch/Backend/.local/: violations.jsonl
footwatch/Backend/scripts/: build_lambda_bundle.ps1
footwatch/Backend/services/: __init__.py
footwatch/Frontend/: package.json
footwatch/Frontend/src/: main.tsx
footwatch/objective_3_footpath/: backend_sync.py  dashboard.py  requirements_edge.txt  streamlit_app.py
footwatch/objective_3_footpath/config/: dashboard.json  (+3 more)
objective_3_footpath/: .backend_sync_state.json  DASHBOARD_GUIDE.md  README_SETUP.md  main.py  streamlit_app.py
objective_3_footpath/config/: backend_ingest.json  footpath_roi.json  frontend_camera_lab.json  speed_calibration.json
objective_3_footpath/scripts/: download_models.py  evaluate_180_clips.py  init_configs.py  run_dashboard.ps1  run_edge_runtime.ps1  run_setup_and_test.ps1  run_streamlit.ps1
objective_3_footpath/tests/: smoke_test.py
(+124 files in other folders)
