[project]
name = "footwatch-backend"
version = "0.1.0"
description = "Backend APIs and worker scaffold for FootWatch Objective 3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34.0",
  "fastapi>=0.116.0",
  "fpdf2>=2.8.0",
  "jsonschema>=4.25.0",
  "mangum>=0.19.0",
  "pydantic>=2.11.0",
  "python-dotenv>=1.0.1",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["services"]
pythonpath = ["."]
