<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fw_ros2_mqtt_bridge</name>
  <version>1.0.0</version>
  <description>MQTT bridge — SQLite spool, AWS IoT Core TLS, at-least-once delivery</description>
  <maintainer email="footwatch@example.com">Footwatch Edge Team</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>fw_msgs</exec_depend>
  <test_depend>ament_pep8</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
