<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fw_tracking_speed_node</name>
  <version>1.0.0</version>
  <description>Stage 3 ByteTrack + Kalman speed estimation node</description>
  <maintainer email="footwatch@example.com">Footwatch Edge Team</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>fw_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <test_depend>ament_pep8</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
